# scribe-it

./: .gitignore  README.md  bot.py  downloader.py  pyproject.toml  scribe.py  storage.py
deploy/: deploy.sh  scribe-bot.service
